# Learning

./: AEMC_Pic16F887.c  CMakeLists.txt  README.md  code  code.cpp
edabit/easy/: broken_bridge.cpp  count_syllables  count_syllables.cpp  double_char  double_char.cpp  last_digit_ultimate.cpp  the-cooler-count_syllables  the-cooler-count_syllables.cpp
edabit/hard/: code.cpp  count_smiles.cpp  letter_distance.cpp  make_box  make_box.cpp  matrix_transpose.cpp  symbol_value_matrix.cpp  valid_hex_code  valid_hex_code.cpp  wizardry_find_the_odd_integer.cpp
edabit/hard/make_box.dSYM/Contents/: Info.plist
edabit/hard/make_box.dSYM/Contents/Resources/DWARF/: make_box
edabit/hard/symbol_value_matrix.dSYM/Contents/: Info.plist
edabit/hard/symbol_value_matrix.dSYM/Contents/Resources/DWARF/: symbol_value_matrix
edabit/medium/: code.cpp  combinations_dar_nu_prea  combinations_dar_nu_prea.cpp  diagonal_of_cube  diagonal_of_cube.cpp  tweaking_letters  tweaking_letters.cpp
edabit/very-easy/: add_2_numbers  add_2_numbers.cpp
leetcode/: reverse_bits.cpp
leetcode/easy/: 1D_array_to_2D_array.cpp  CHECK_LATER_best_time_to_buy.cpp  CHECK_LATER_remove_duplicates_sorted_array.cpp  CHECL_LATER_binary_add.cpp  SLOW_count_the_number_of_consistent_strings.cpp  closest_to_zero.cpp  code.cpp  first_accurance.cpp  fun  fun.cpp  length_of_last_word.cpp  merge_sorted_arrays.cpp  palindrome.cpp  pascals_triangle.cpp  remove_elements.cpp  roman2integer.cpp  search_insert_position.cpp  single_number.cpp  triangle.cpp  two_sum.cpp
(+2 files in other folders)
